# ann-filtering-benchmark-datasets

./: .gitignore  README.md  pyproject.toml  sync.sh
generators/: config.py  generate.py
generators/arxiv/: README.md  generate_arxiv_queries.py  generate_filters.py
generators/clothes_images/: generate_hnm_queries.py
generators/cohere_wiki/: hf.py  prepare_data.py  search_exact.py
generators/dbpedia_openai_1M/: generate_dbpedia_openai_1M.py
generators/laion/: generate_laion_small.py  generate_laion_small_no_filters.py
generators/random_data/: generate.py  generate_random_datasets.py  generate_random_float_datasets.py  generate_random_geo_datasets.py  generate_random_int_datasets.py  generate_random_keyword_datasets.py  generate_random_with_keywords.py
generators/search_generator/: qdrant_generator.py
generators/yandex_1B/: __init__.py  generate_deep_10k_gt.py  generate_t2i_100k_gt.py
generators/yandex_t2i_1B/: generate_yandex_100k_gt.py
