[tool.poetry]
name = "ann-filtering-benchmark-datasets"
version = "0.1.0"
description = ""
authors = ["Qdrant Team"]

[tool.poetry.dependencies]
python = "^3.9"
h5py = "^3.6.0"
scikit-learn = "^1.1.1"
numpy = "^1.22.4"
geopy = "^2.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
