[tool.poetry]
name = "ann-filtering-benchmark-datasets"
version = "0.1.0"
description = ""
authors = ["Qdrant Team"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
h5py = "^3.6.0"
scikit-learn = "^1.1.1"
numpy = "^1.22.4"
geopy = "^2.2.0"
tqdm = "^4.64.0"
haversine = "^2.5.1"
pyarrow = ">=12.0.1"
qdrant-client = "^1.14.0"
datasets = "^2.14.5"
huggingface-hub = "^0.32.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
